mdf jdk version